<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:my="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_main_bg"
    tools:context="com.mycj.jusd.MainActivity" >

    <RadioGroup
        android:id="@+id/rg_tab"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_main_tab"
        android:orientation="horizontal" >

        <com.mycj.jusd.view.FangRadioButton
            android:id="@+id/rb_tab_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:checked="false"
            android:drawableTop="@drawable/selector_bg_tab_home"
            android:gravity="bottom|center_horizontal"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/tab_home"
            android:textColor="#fff"
            android:textSize="12sp"
           my:f_typeface="JIAN" />

        <com.mycj.jusd.view.FangRadioButton
               my:f_typeface="JIAN"
            android:id="@+id/rb_tab_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:checked="false"
            android:drawableTop="@drawable/selector_bg_tab_me"
            android:gravity="bottom|center_horizontal"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/tab_me"
            android:textColor="#fff"
            android:textSize="12sp" />

        <com.mycj.jusd.view.FangRadioButton
               my:f_typeface="JIAN"
            android:id="@+id/rb_tab_setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:checked="false"
            android:drawableTop="@drawable/selector_bg_tab_setting"
            android:gravity="bottom|center_horizontal"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/tab_setting"
            android:textColor="#fff"
            android:textSize="12sp" />
    </RadioGroup>

    <FrameLayout
        android:id="@+id/frame_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rg_tab" >

       <!--  <com.mycj.jusd.view.NoScrollViewPager
            android:id="@+id/vp_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </com.mycj.jusd.view.NoScrollViewPager> -->
    </FrameLayout>

</RelativeLayout>