<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:my="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mycj.jusd.fragment.SettingFragment" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/bg_main_tab" >

        <com.mycj.jusd.view.FangTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/tab_setting"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            my:fang_typeface="JIAN" />
    </RelativeLayout>

    <com.mycj.jusd.view.DampingScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp" >

            <RelativeLayout
                android:id="@+id/rl_setting_device"
                android:layout_width="match_parent"
                android:layout_height="@dimen/me_item_height"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/selector_bg_item_setting"
                android:clickable="true"
                android:padding="8dp" >

                <ImageView
                    android:id="@+id/img_setting_device"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_setting_device" />

                <com.mycj.jusd.view.FangTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:layout_toRightOf="@id/img_setting_device"
                    android:text="@string/my_device"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    my:fang_typeface="JIAN" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_turn_to" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_setting_information"
                android:layout_width="match_parent"
                android:layout_height="@dimen/me_item_height"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/selector_bg_item_setting"
                android:clickable="true"
                android:padding="8dp" >

                <ImageView
                    android:id="@+id/img_setting_user_info"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_tab_setting_on" />

                <com.mycj.jusd.view.FangTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:layout_toRightOf="@id/img_setting_user_info"
                    android:text="@string/watch_setting"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    my:fang_typeface="JIAN" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_turn_to" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_setting_sync"
                android:layout_width="match_parent"
                android:layout_height="@dimen/me_item_height"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/selector_bg_item_setting"
                android:clickable="true"
                android:padding="8dp" >

                <ImageView
                    android:id="@+id/img_setting_sync"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_setting_user_info" />

                <com.mycj.jusd.view.FangTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:layout_toRightOf="@id/img_setting_sync"
                    android:text="@string/sync_data"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    my:fang_typeface="JIAN" />

                <com.mycj.jusd.view.FangTextView
                    android:id="@+id/tv_sync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:textSize="12sp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:textColor="#fff"
                    android:background="@drawable/bg_sync_text_on"
                    android:text="未连接" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_setting_sport_plan"
                android:layout_width="match_parent"
                android:layout_height="@dimen/me_item_height"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/selector_bg_item_setting"
                android:clickable="true"
                android:padding="8dp" >

                <ImageView
                    android:id="@+id/ic_setting_user_alarm"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_sport_count" />

                <com.mycj.jusd.view.FangTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:layout_toRightOf="@id/ic_setting_user_alarm"
                    android:text="@string/sport_plan"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    my:fang_typeface="JIAN" />

                
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_turn_to" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_setting_remind_person"
                android:layout_width="match_parent"
                android:layout_height="@dimen/me_item_height"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/selector_bg_item_setting"
                android:clickable="true"
                android:padding="8dp" >

                <ImageView
                    android:id="@+id/img_setting_about"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_setting_user_alarm" />

                <com.mycj.jusd.view.FangTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:layout_toRightOf="@id/img_setting_about"
                    android:text="@string/person_remind"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    my:fang_typeface="JIAN" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_turn_to" />
            </RelativeLayout>
            
            <RelativeLayout
                android:id="@+id/rl_setting_about"
                android:layout_width="match_parent"
                android:layout_height="@dimen/me_item_height"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/selector_bg_item_setting"
                android:clickable="true"
                android:padding="8dp" >

                <ImageView
                    android:id="@+id/img_setting_camera"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_setting_about" />

                <com.mycj.jusd.view.FangTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:layout_toRightOf="@id/img_setting_camera"
                    android:text="@string/about"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    my:fang_typeface="JIAN" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_turn_to" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_setting_exit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/me_item_height"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/selector_bg_item_setting"
                android:clickable="true"
                android:padding="8dp" >


                <com.mycj.jusd.view.FangTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:text="退出登入"
                    android:textColor="@color/bg_main_tab"
                    android:textSize="22sp"
                    android:layout_centerInParent="true"
                    my:fang_typeface="JIAN" />

           
            </RelativeLayout>
            
    <!--           <ProgressBar
                  android:id="@+id/pb_t"
        style="@style/mProgress_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_gravity="center_vertical"
       	android:max="100"
        />  -->
            
            
        </LinearLayout>
    </com.mycj.jusd.view.DampingScrollView>

</LinearLayout>