<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:my="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_main_bg"
    android:orientation="vertical"
    tools:context="com.mycj.jusd.DeviceAcitivy" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/bg_main_tab" >

        <com.mycj.jusd.view.AlphaImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:src="@drawable/ic_nav_back" />

        <com.mycj.jusd.view.AlphaImageView
            android:id="@+id/img_connect"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:src="@drawable/ic_nav_re_device" />

        <com.mycj.jusd.view.FangTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/my_device"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            my:fang_typeface="JIAN" />
    </RelativeLayout>

    <com.mycj.jusd.view.RadarView
        android:id="@+id/scan_radar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@drawable/selector_bg_device_listv"
        android:orientation="vertical"
        android:padding="2dp" >
	<LinearLayout 
	    android:visibility="gone"
	     android:id="@+id/ll_binded_info"
	     android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:orientation="vertical"
	    >
        <com.mycj.jusd.view.FangTextView
            android:id="@+id/tv_binded_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/bonded_device"
            android:textColor="#9fff"
            android:textSize="12sp" />
        
<View android:layout_height="1px"
		    android:layout_width="match_parent"
		    android:background="@color/bg_main_tab"
		    />
        <RelativeLayout
           android:id="@+id/rl_binded_info"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:gravity="center"
            android:clickable="true"
            android:background="@drawable/selector_bg_item"
          >

            <com.mycj.jusd.view.FangTextView
                android:id="@+id/tv_binded_device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="蓝牙名称"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                my:fang_typeface="JIAN" />

            <com.mycj.jusd.view.FangTextView
                android:id="@+id/tv_binded_device_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_vertical"
                android:text="蓝牙地址"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                my:fang_typeface="NUM" />
        </RelativeLayout>
<View android:layout_height="1px"
		    android:layout_width="match_parent"
		    android:background="@color/bg_main_tab"
		    />
</LinearLayout>
        <com.mycj.jusd.view.FangTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/nearby_device"
            android:textColor="#9fff"
            android:textSize="12sp" />
        
		<View android:layout_height="1px"
		    android:layout_width="match_parent"
		    android:background="@color/bg_main_tab"
		    />
        <ListView
            android:id="@+id/lv_device"
            android:layout_width="match_parent"
            android:layout_height="match_parent" 
            android:divider="@color/bg_main_tab"
            android:dividerHeight="1px"
            >
         
        </ListView>
           	<View android:layout_height="1px"
		    android:layout_width="match_parent"
		    android:background="@color/bg_main_tab"
		    />
    </LinearLayout>

</LinearLayout>